# mig

./: .gitignore  =announce-1.1  =announce-1.2  =announce-1.3  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  boolean.h  configure  configure.ac  configure.in  cpu.sym  error.c  global.c  global.h  header.c  lexxer.c  lexxer.h  lexxer.l  long_types.h  message.h  mig.in  mig_string.h  migcom.c  mkinstalldirs  parser.c  parser.h  parser.y  routine.c  routine.h  server.c  statement.c  statement.h  string.c  type.c  type.h  user.c  (+4 more)
debian/: README.Debian  changelog  control  copyright  rules
tests/: Makeconf.am  Makefile.am  base_types.defs  test_lib.sh
tests/bad/: Makefile.am  invalid_subsystem.defs  no_request_port.defs  no_subsystem.defs  run_bad_test.sh
tests/generate-only/: Makefile.am  run_generate_only_test.sh  subsystem-kernel.defs  subsystem-user.defs
tests/good/: Makefile.am  array.defs  case.defs  complex-types.defs  ctypes.defs  directions.defs  enum.defs  import.defs  inline.defs  modtype.defs  routine.defs  run_good_test.sh  sizeof.defs  string.defs  struct.defs  typedef.defs  types.defs  union.defs  waittime.defs
tests/includes/: server.h  types.h
tests/includes/mach/: mig_support.h
